fix: remove desnecessary gap

--- a/assets/css/csv-style.css
+++ b/assets/css/csv-style.css
@@ -148,7 +148,6 @@
 
     .pagination-controls {
         flex-direction: row;
-        gap: 10px;
     }
     .csv-table-pagination{
         flex-direction: column;
